--- a/2_DesktopGUI/polybar/config.ini
+++ b/2_DesktopGUI/polybar/config.ini
@@ -17,10 +17,10 @@
 ;==========================================================
 
 [colors]
-background = #2e3440
-background-alt = #4c566a
-foreground = #C5C8C6
-primary = #88c0d0
+background = #292a30
+background-alt = #292a30
+foreground = #dfdfe0
+primary = #d9c97c
 secondary = #88c0d0
 alert = #A54242
 disabled = #707880
@@ -42,8 +42,8 @@ line-size = 2pt
 border-size = 3pt
 border-color = #00000000
 
-padding-left = 1
-padding-right = 1
+padding-left = 2
+padding-right = 2
 
 module-margin = 2
 
@@ -209,17 +209,17 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#88c0d0}%ifname%%{F#707880} disconnected
+label-disconnected = %{F#d9c97c}%ifname%%{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#88c0d0}%ifname%%{F-} %essid% 
+label-connected = %{F#4ec4e6}%ifname%%{F-} %essid% 
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#88c0d0}%ifname%%{F-} %local_ip%
+label-connected = %{F#d9c97c}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
@@ -234,10 +234,10 @@ label-foreground = ${colors.primary}
 [module/battery]
 type = internal/battery
 
-label-charging = %{F#88c0d0}Charging%{F-} %percentage%%
-label-discharging = %{F#88c0d0}Discharging%{F-} %percentage%%
-label-full = %{F#88c0d0}Fully Charged%{F-}
-label-low = %{F#F07474}Battery Low%{F-}
+label-charging = %{F#78c2b3}Charging%{F-} %percentage%%
+label-discharging = %{F#d9c97c}Discharging%{F-} %percentage%%
+label-full = %{F#78c2b3}Fully Charged%{F-}
+label-low = %{F#ff8170}Battery Low%{F-}
 
 format-charging = <label-charging>
 format-discharging = <label-discharging>
