--- a/2_DesktopGUI/polybar/config.ini
+++ b/2_DesktopGUI/polybar/config.ini
@@ -17,11 +17,11 @@
 ;==========================================================
 
 [colors]
-background = #292a30
+background = #282a36
 background-alt = #292a30
-foreground = #dfdfe0
-primary = #d9c97c
-secondary = #88c0d0
+foreground = #f8f8f2
+primary = #bd93f9
+secondary = #ff79c6
 alert = #A54242
 disabled = #707880
 
@@ -209,17 +209,17 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#d9c97c}%ifname%%{F#707880} disconnected
+label-disconnected = %{F#bd93f9}%ifname%%{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#4ec4e6}%ifname%%{F-} %essid% 
+label-connected = %{F#bd93f9}%ifname%%{F-} %essid% 
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#d9c97c}%ifname%%{F-} %local_ip%
+label-connected = %{F#bd93f9}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
@@ -234,10 +234,10 @@ label-foreground = ${colors.primary}
 [module/battery]
 type = internal/battery
 
-label-charging = %{F#78c2b3}Charging%{F-} %percentage%%
-label-discharging = %{F#d9c97c}Discharging%{F-} %percentage%%
-label-full = %{F#78c2b3}Fully Charged%{F-}
-label-low = %{F#ff8170}Battery Low%{F-}
+label-charging = %{F#50fa7b}Charging%{F-} %percentage%%
+label-discharging = %{F#f1fa8c}Discharging%{F-} %percentage%%
+label-full = %{F#50fa7b}Fully Charged%{F-}
+label-low = %{F#ff5555}Battery Low%{F-}
 
 format-charging = <label-charging>
 format-discharging = <label-discharging>
