--- a/2_DesktopGUI/polybar/config.ini
+++ b/2_DesktopGUI/polybar/config.ini
@@ -28,9 +28,9 @@ disabled = #707880
 [bar/principal]
 width = 100%
 height = 20pt
-radius = 0
+radius = 5
 monitor = eDP-1
-bottom = true
+bottom = false
 
 ; dpi = 96
 
@@ -49,7 +49,7 @@ module-margin = 2
 
 wm-restack = bspwm
 
-separator = |
+separator = #
 separator-foreground = ${colors.disabled}
 
 font-0 = Ubuntu:size=10;1
@@ -74,9 +74,9 @@ enable-ipc = true
 [bar/externalMonitor]
 width = 100%
 height = 20pt
-radius = 0
+radius = 5
 monitor = HDMI-1
-bottom = true
+bottom = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
